# Neusoft_practice_study_2024

./: Linux命令大全(修改版).chw
cpp/day1.2024.3.14/: CPP02_06_01_Cout.cpp  CPP02_06_02_Cin.cpp  CPP04_02_01_Reference.cpp  CPP04_02_02_Reference.cpp  GuessNumber.java  day1_init  day1_init.cpp
day1.2024.2.27/: Linux基础中的常用命令.ppt  命令汇总.txt
day2.2024.2.28/: README.md
linux/: README.md  package-lock.json
linux/day1.2024.2.27/: README.md
linux/day10.2024.3.11/: client  client.c  ipcvt.c  server  server.c
linux/day11.2024.3.12/: 10-1timeout.c  10-2timeout.c  10-3timeout.c  SQLite .pptx  ftpclient.c  ftpserv.c  新建 文本文档 (3).txt  网络续.pptx
linux/day2.2024.2.28/: README.md
linux/day3.2024.2.29/: README.md  shell.txt  系统调用与库函数.txt
linux/day3.2024.2.29/shell/: ProcessControl.sh  echo.sh
linux/day4.2024.3.1/: 2 Linux常用命令与vim.pptx  README.md
linux/day4.2024.3.1/shell/: case.sh  logon.sh
linux/day4.2024.3.1/shell/dir2/: case.sh  for1.sh  for2.sh  for_adduser.sh  for_adduser_list.sh  for_deluser.sh  if.sh  (+3 more)
linux/day5.2024.3.4/: README.md  note.txt
linux/day5.2024.3.4/shell/: logon_in_userList.sh  ping.sh  userList
linux/day6.2024.3.5/: README.md  a.out
linux/day6.2024.3.5/cpp/: open.cpp  r_w  r_w.cpp
linux/day7.2024.3.6/: README.md
linux/day8.2024.3.7/: README.md  pid  pid.cpp  pthread.c  第3章.pptx  第4章.pptx
linux/day9.2024.3.8/: 网络.pptx
linux/work/: work1_convert_IP_address_to_byte_order  work1_convert_IP_address_to_byte_order.cpp  work1_login_from_user_file.sh
linux/work/work_linux_chat_rust/: Cargo.toml
linux/work/work_linux_chat_rust/src/: main.rs
