[package]
name = "work_linux_chat_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.0", features = ["full"]}
axum = {version = "0.5.13", features = ["headers"]}
sqlx = { version = "0.6.0", features = [ "runtime-tokio-rustls" ,"mysql","chrono"] }
once_cell = "1.13.0"
serde = {version = "1.0.140", features = ['derive']}
serde_json = "1.0.82"
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.15", features = ["env-filter"]}
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
chrono = { version = "0.4.19",features = ["serde"] }
